--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                 <button class="btn-icon" id="account-settings-btn" title="Account Settings">
                     <i class="fas fa-cog"></i>
                 </button>
+                <button class="btn-icon" id="switch-account-btn" title="Switch Account">
+                    <i class="fas fa-exchange-alt"></i>
+                </button>
                 <button class="btn-icon" id="logout-btn" title="Logout">
                     <i class="fas fa-sign-out-alt"></i>
                 </button>
