--- a/index.html
+++ b/index.html
@@ -358,6 +358,24 @@
         </div>
     </div>
 
+    <!-- Switch Account Modal -->
+    <div class="modal" id="switch-account-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title">Switch Account</h3>
+                <button class="modal-close" id="close-switch-account-modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <ul id="saved-accounts-list" class="accounts-list"></ul>
+                <div class="add-account-container">
+                    <button class="btn btn-outline btn-block" id="add-account-btn">
+                        <i class="fas fa-user-plus"></i> Add Account
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Dark Mode Toggle -->
     <div class="dark-mode-toggle" id="dark-mode-toggle" title="Toggle Dark Mode">
         <i class="fas fa-moon" id="dark-mode-icon"></i>
