--- a/index.html
+++ b/index.html
@@ -367,6 +367,10 @@
             </div>
             <div class="modal-body">
                 <ul id="saved-accounts-list" class="accounts-list"></ul>
+                <div id="save-current-account-container" class="add-account-container" style="display: none;">
+                    <input type="password" id="save-current-password" placeholder="Enter password to save account" />
+                    <button class="btn btn-primary" id="save-current-account-btn">Save Account</button>
+                </div>
                 <div class="add-account-container">
                     <button class="btn btn-outline btn-block" id="add-account-btn">
                         <i class="fas fa-user-plus"></i> Add Account
