--- a/index.html
+++ b/index.html
@@ -379,6 +379,23 @@
         </div>
     </div>
 
+    <!-- Calling Modal -->
+    <div class="modal" id="calling-modal">
+        <div class="modal-content">
+            <h3>Calling <span id="calling-callee-name"></span>...</h3>
+            <button class="btn btn-danger" id="cancel-call-btn">Cancel</button>
+        </div>
+    </div>
+
+    <!-- Incoming Call Modal -->
+    <div class="modal" id="incoming-call-modal">
+        <div class="modal-content">
+            <h3><span id="incoming-caller-name"></span> is calling you</h3>
+            <button class="btn btn-primary" id="accept-call-btn">Accept</button>
+            <button class="btn btn-danger" id="decline-call-btn">Decline</button>
+        </div>
+    </div>
+
     <!-- Dark Mode Toggle -->
     <div class="dark-mode-toggle" id="dark-mode-toggle" title="Toggle Dark Mode">
         <i class="fas fa-moon" id="dark-mode-icon"></i>
